updated build and deploy

--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -20,7 +20,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '17'
-        distribution: 'adoptopenjdk'  # You can change this to another JDK distribution if needed
+        distribution: 'temurin'  # You can change this to another JDK distribution if needed
 
     - name: Cache Maven dependencies
       uses: actions/cache@v3
