--- a/pom.xml
+++ b/pom.xml
@@ -34,12 +34,16 @@
     </dependencies>
 
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
+    <plugins>
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <version>3.1.4</version>
+            <configuration>
+                <mainClass>com.example.demo.DemoApplication</mainClass>
+            </configuration>
+        </plugin>
+    </plugins>
     </build>
 </project>
 
