--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -1,15 +1,15 @@
-name: Build and Test Spring Boot Application
+name: Build, Test, and Push Docker Image
 
 on:
   push:
     branches:
-      - main  # Trigger on push to the main branch (adjust as needed)
+      - main  # Trigger on push to the main branch
   pull_request:
     branches:
-      - main  # Trigger on pull requests targeting the main branch (adjust as needed)
+      - main  # Trigger on pull requests targeting the main branch
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest  # Using an Ubuntu runner for the build
 
     steps:
@@ -20,7 +20,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '17'
-        distribution: 'temurin'  # You can change this to another JDK distribution if needed
+        distribution: 'temurin'
 
     - name: Cache Maven dependencies
       uses: actions/cache@v3
@@ -39,8 +39,14 @@ jobs:
     - name: Build Spring Boot jar
       run: mvn package -DskipTests=true
 
-    - name: Upload artifact (optional)
-      uses: actions/upload-artifact@v3
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
       with:
-        name: spring-boot-app
-        path: target/*.jar  # This uploads the built JAR file
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build Docker image
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/spring-boot:latest .
+
+    - name: Push Docker image to Docker Hub
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/spring-boot:latest
