--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -27,13 +27,13 @@ jobs:
           ${{ runner.os }}-maven-
 
     - name: Build with Maven
-      run: mvn clean install --no-transfer-progress -DskipTests=true
+      run: mvn clean package -DskipTests=true
+
+    - name: List target directory for debugging
+      run: ls -R target
 
     - name: Run tests
       run: mvn test --no-transfer-progress
-
-    - name: Build Spring Boot jar
-      run: mvn package -DskipTests=true
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
